# updated_aafc_data_scanner

./: .gitignore  AAFC Open Data.pbix  LICENSE  README.md  cli.py  link_checks.py  pyproject.toml  requirements.txt
aafc_data_scanner/: __main__.py  constants.py  data.py  helper_functions.py  inventories.py  link_checks.py  tools.py
data_scanner/: .gitignore  __main__.py  constants.py  inventory_functions.py  tools.py
documentation/: datasets_inventories_schema.json  formats.csv  iso639_1to3.csv  open_canada_orgs_list.csv  resources_inventory_schema.json  url_codes.csv
helper_tables/: formats.csv  iso639.csv  url_codes.csv
outputs/: datasets_inventory_2024-07-25_131128.xlsx  resources_inventory_2024-07-25_131128.xlsx
test_files/: datasets.csv  datasets1.csv  datasets1.json  datasets1_resourcesIDs.json  datasets2.csv  datasets_currency.json  datasets_modified.csv  datasets_modified.json  datasets_needs_update.json  datasets_official_lang.csv  datasets_ol.json  datasets_open_formats.csv  datasets_open_formats.json  datasets_spec.csv  datasets_spec.json  datasets_up_to_date.csv  date_ago.csv  resources.csv  resources1.csv  resources1.json  resources1.xlsx  resources_modified.csv  resources_modified.json  resources_needs_update.json  resources_official_lang.csv  resources_ol.json  resources_open_formats.csv  resources_open_formats.json  resources_spec.csv  resources_spec.json
tests/: manual_tests.py  test_data_catalogue.py  test_helper_functions.py  test_inventory.py  test_inventory_functions.py  test_main.py
tests/io/: datasets.csv  datasets_modified.csv  datasets_official_lang.csv  datasets_open_formats.csv  datasets_spec.csv  datasets_up_to_date.csv  resources_modified.csv  resources_open_formats.csv  resources_spec.csv
