[tool.poetry]
name = "aafc-data-catalogue-scanner"
version = "0.1.0"
description = ""
authors = ["a-taillardat <alexis.taillardat@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.0"
requests = "^2.32.3"
urllib3 = "^2.2.2"
openpyxl = "^3.1.5"
tqdm = "^4.66.4"
tenacity = "^9.0.0"


[tool.poetry.group.test.dependencies]
mypy = "^1.11.0"
pandas-stubs = "^2.2.2.240603"
types-requests = "^2.32.0.20240712"
types-tqdm = "^4.66.0.20240417"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
