[tool.poetry]
name = "aafc-data-scanner"
version = "0.1.0"
description = ""
authors = ["a-taillardat <alexis.taillardat@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.0"
requests = "^2.32.3"
urllib3 = "^2.2.2"
openpyxl = "^3.1.5"
tqdm = "^4.66.4"
colorama = "^0.4.6"

[tool.poetry.group.test.dependencies]
mypy = "^1.11.0"
pandas-stubs = "^2.2.2.240603"
types-requests = "^2.32.0.20240712"
types-tqdm = "^4.66.0.20240417"

[tool.poetry.scripts]
aafc-data-scanner = "aafc-data-scanner.data_scanner:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-pyinstaller-plugin.scripts]
aafc-data-scanner = "data_scanner/__main__.py"